--- a/src/main/webapp/pages/general/footer.xhtml
+++ b/src/main/webapp/pages/general/footer.xhtml
@@ -8,11 +8,10 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="../template/ui.xhtml">
 	<ui:define name="body">
-		<footer>
-		<div align="center">
-			<b><p:outputLabel value="© 2018 CLBProject - " /></b>
-			<p:outputLabel value="All rights reserved"></p:outputLabel>
+		<div align="center" class="footer">
+			<b><p:outputLabel value="© Copyright 2018 CLBProject" /></b>
+			<br/>
+			<p:outputLabel style="font-size: 10px" value="All rights reserved"></p:outputLabel>
 		</div>
-		</footer>
 	</ui:define>
 </ui:composition>
